# chess-pressure

./: .gitignore  Dockerfile  Makefile  README.md  app.py  fly.toml  games.py  pyproject.toml
src/chess_pressure/: app.py  engine.py  games.py
src/chess_pressure/static/: app.js  index.html  style.css
static/: style.css
